fix bug in firefox (overflow-wrap)

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -482,7 +482,7 @@ div
 					border: solid 1px var(--TableBorderColor)
 					padding: 0px
 					padding-left: 3px
-					word-break: break-word /*перенос слов если пользователь задал слишком маленькую ширину*/
+					overflow-wrap: break-word /* перенос по словам */
 					overflow: hidden
 					div
 						&.div_checkbox
